EBS-vol.yaml


apiVersion: v1
kind: Pod
metadata:
  name: test-ebs
  labels: 
     name: raw-volume-testing
spec:
  containers:
  - image: mongo
    name: mongodb
    imagePullPolicy: Always
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db
  volumes:
  - name: mongodb-data
    awsElasticBlockStore:
       volumeID: vol-078844ca5cd9fe4ba
       fsType: ext4
  nodeSelector:
      kubernetes.io/hostname: ip-172-20-43-15.ec2.internal
