PV-POD.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim1
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage 

---

apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim2
  containers:
    - name: task-pv-container
      image: sreeharshav/utils
      volumeMounts:
        - mountPath: /tmp/mydata/
          name: task-pv-storage


---

apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod-3
spec:
  volumes:
    - name: task-pv-storage-3
      persistentVolumeClaim:
        claimName: task-pv-claim3
  containers:
    - name: task-pv-container
      image: sreeharshav/utils
      volumeMounts:
        - mountPath: /tmp/mydata/
          name: task-pv-storage-3
