SA.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: kubectlpod2
  name: kubectlpod2
  namespace: default
spec:
  serviceAccountName: api-access
  containers:
  - image: sreeharshav/kubectlpod:v2
    name: kubectlpod2
