Secrets.yaml
# kubectl create configmap awsregion --from-literal=AWS_DEFAULT_REGION='us-east-1'


apiVersion: apps/v1
kind: Deployment
metadata:
  name: awscli-deployment
  labels:
    app: awscli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awscli
  template:
    metadata:
      labels:
        app: awscli
    spec:
      containers:
        - name: awscli
          image: banst/awscli
          #command: ["s3 ls"] #ENTRYPOINT in Dockerfile
          args: ["ec2", "describe-instances"]  #CMD in Dockerfile
          ports:
            - containerPort: 3306
