configmap.yaml

# ====================NGINX-WITH-SINGLE-VOLUME-AS-CONFIGMAPS====================
# git clone https://github.com/mavrick202/dockertest1.git
# cd dockertest1
# ku create configmap html1 --from-file=index.html
# ku create configmap js1 --from-file=scorekeeper.js
# ku create configmap css1 --from-file=style.css

# ===================-NGINX-MAP-MULTIPLE-CONFIGMAPS-TO-SINGLE-FOLDER-===========     


---

apiVersion: v1
kind: Pod
metadata:
  name: testpod001
spec:
  containers:
    - name: testpod001
      image: sreeharshav/utils:latest
