storageclasses.yaml
#kubectl api-resources | grep -i storage
#kubectl api-versions | grep -i storage
#kubectl explain storageclasses
#kubectl get storageclass
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      name: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        name: mongodb
    spec:
      containers:
      - image: mongo
        name: mongodb
        imagePullPolicy: Always
        volumeMounts:
        - name: mongodb-data-1
          mountPath: /data/db
        - name: mongodb-data-2
          mountPath: /data/db2
        - name: mongodb-data-3
          mountPath: /data/db3
      volumes:
      - name: mongodb-data-1
        persistentVolumeClaim: 
          claimName: auto-assign-pv-1
      - name: mongodb-data-2
        persistentVolumeClaim: 
          claimName: auto-assign-pv-2
      - name: mongodb-data-3
        persistentVolumeClaim: 
          claimName: auto-assign-pv-3
      nodeSelector:
          kubernetes.io/hostname: ip-172-20-43-15.ec2.internal
