storages.yaml
# ===================EMPTY-DIR===========================================
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - name: mypod1
    image: sreeharshav/rollingupdate:v1
    volumeMounts:
      - name: testvol
        mountPath: /tmp/testvolume
  - name: mypod2
    image: sreeharshav/utils
    volumeMounts:
      - name: testvol
        mountPath: /tmp/data
  volumes:
     - name: testvol
       emptyDir: {}


# Hostpath

---

apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - name: mypod1
    image: sreeharshav/rollingupdate:v1
    volumeMounts:
      - name: testvol
        mountPath: /tmp/testvolume
  - name: mypod2
    image: sreeharshav/utils
    volumeMounts:
      - name: testvol
        mountPath: /tmp/data
  volumes:
    - name: testvol
      hostPath:
        path: /tmp/host
        type: Directory  # Pod will fail if directory doesn't exist
  nodeSelector:
    kubernetes.io/hostname: ip-172-20-43-15.ec2.internal
